# tempura

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MAKEALL.sh  MANIFEST.in  Makefile  README.md  README.rst  meson.build  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
F90/src/: Makefile  alkernel.f90
docs/: Makefile  conf.py  index.rst  make.bat  reference.rst  usage.rst
docs/_build/doctrees/: authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  readme.doctree  reference.doctree  usage.doctree
docs/_build/html/: .buildinfo  authors.html  contributing.html  genindex.html  history.html  index.html  objects.inv  py-modindex.html  readme.html  reference.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/tempura/: norm_lens.html  norm_rot.html  norm_src.html  norm_tau.html
docs/_build/html/_static/: documentation_options.js
examples/: bias-hardened_asym.ipynb  norm.ipynb  norm_general.ipynb  norm_lens.ipynb  norm_lens_asym.ipynb
fortran/: Makefile  alkernel.f90  noise_spec.f90  norm_general.f90  norm_lens.f90  norm_quad.f90  norm_rot.f90  norm_src.f90  norm_tau.f90
module/: makefile.sh  norm_lens.f90  norm_tau.f90
py/: docstr.py  f2pysig.py
pytempura/: __init__.py  _version.py  meson.build  noise_spec.py  norm.py  norm_general.py  norm_lens.py  norm_rot.py  norm_src.py  norm_tau.py
pytempura/tests/: tau_test_norm.py
scripts/: generate_interface.sh  interface.py
scripts/tests/: test_norm.py
sh/: setup.sh
tempura/: __init__.py  _version.py  alkernel.py  norm_lens.py  norm_rot.py  norm_src.py  norm_tau.py
test/: norm.ipynb
tests/: norm.ipynb  norm_test.py  test_norm.py
wrap/tempura/: __init__.py  alkernel.py  norm_lens.py  norm_rot.py  norm_src.py  norm_tau.py
